--- a/www/pages/services.html
+++ b/www/pages/services.html
@@ -9,7 +9,7 @@
 	  <li class="slide">
 	  <div class="middler">
 	  <h3>Интернет-магазин</h3>
-	  <p>Обеспечит Вас всем необходимым для успешной торговли в мировой паутине. Расширьте ваш бизнес за пределы города - на весь регион, всю страну или даже весь мир! Решать только вам.</p>
+	  <p>Обеспечит Вас всем необходимым для успешной торговли в мировой паутине. Расширьте ваш бизнес за пределы города - на весь регион? всю страну? или даже весь мир?! Решать только вам.</p>
 	  </div></li>
 	</ul>
 
