--- a/www/pages/services.html
+++ b/www/pages/services.html
@@ -59,7 +59,7 @@
 	<p>Блоки</p>
 		<check></check>
 	</div>
-	<input class="site-description" required="required" type="text" name="you-site">
+	<textarea resize="none"></textarea>
 	<input class="form-button" type="submit" name="submit-form" placeholder="Отправить">
 	</div>
 </form>
