фикс портфолио, новая форма

--- a/www/pages/portfolio.html
+++ b/www/pages/portfolio.html
@@ -1,9 +1,9 @@
 <script type="text/javascript">
 	$(function(){
-		$('.img_wrapper').hover(function(){
-			$(this).stop().animate({marginTop:'100%', opacity:0}, 600);
+		$('.thumbnail').hover(function(){
+			$(this).children('.img_wrapper').stop().animate({marginTop:'100%', opacity:0}, 600);
 		},function(){
-				$(this).stop().animate({marginTop:'0%', opacity:1}, 600);
+				$(this).children('.img_wrapper').stop().animate({marginTop:'0%', opacity:1}, 600);
 		});
 		})
 </script>
