--- a/www/pages/services.html
+++ b/www/pages/services.html
@@ -52,11 +52,11 @@
 <form class="form-post " action="" method="post" name="other-site">
 <div class="clear-fix">
 	<label for="f1">Ваше имя</label>
-	<input required="required" type="text" id="f1" name="you-name"  placeholder="Ваше имя">
+	<input required="required" type="text" id="f1" name="you-name"  placeholder="Введите имя">
 	<label for="f2">Ваш e-mail или телефон</label>
-	<input required="required" type="text" id="f2" name="you-email-or-phone" placeholder="Ваш e-mail или телефон">
+	<input required="required" type="text" id="f2" name="you-email-or-phone" placeholder="Введите e-mail или телефон">
 	
-	<div id="blocks"><p>Основные модули</p></div>
+	<div id="blocks"><p>Укажите интересующие модули</p></div>
 	<div class="blocks_list clear-fix">	
 
 		<input id="check-1" name="check-1" type="checkbox" атрибуты>
