--- a/www/pages/services.html
+++ b/www/pages/services.html
@@ -1,4 +1,5 @@
 <div class="slider">
+<a class="more_button" href="#">Подробнее</a>
 	<ul class="slider_window">
 	  <li class="slide"><div class="middler">
 	  <h3>Сайт-визитка </h3>
@@ -10,7 +11,9 @@
 	  <div class="middler">
 	  <h3>Интернет-магазин</h3>
 	  <p>Обеспечит Вас всем необходимым для успешной торговли в мировой паутине. Расширьте ваш бизнес за пределы города - на весь регион? всю страну? или даже весь мир?! Решать только вам.</p>
-	  </div><div></li>
+	  </div>
+	  
+	  </li>
 	</ul>
 
 	<div class="slider_control clear-fix">
@@ -60,7 +63,7 @@
 	<div class="blocks_list clear-fix">	
 
 		<input id="check-1" name="check-1" type="checkbox" атрибуты>
-		<label for="check-1">Кнопка</label>
+		<label for="check-1">Кнопка Кнопка</label>
 		
 		<input id="check-2" name="check-2" type="checkbox" атрибуты>
 		<label for="check-2">Кнопка</label>
@@ -84,7 +87,7 @@
 		<label for="check-8">Кнопка</label>
 		
 		<input id="check-9" name="check-9" type="checkbox" атрибуты>
-		<label for="check-9">Кнопка</label>
+		<label for="check-9">Интернет-магазин</label>
 		
 
 	</div>
@@ -93,6 +96,10 @@
 	<div class="form-button"><input id="form-button" type="submit" name="submit-form" placeholder="Отправить"></div>
 	</div>
 </form>
+
+		<a class="page" href=""></a>
+		<a class="page" href=""></a>
+		<a class="page" href=""></a>
 
 <script type="text/javascript">
 
