--- a/www/pages/services.html
+++ b/www/pages/services.html
@@ -94,9 +94,9 @@
 	</div>
 </form>
 
-		<a class="page" href=""></a>
-		<a class="page" href=""></a>
-		<a class="page" href=""></a>
+		<a class="page" href="/visit"></a>
+		<a class="page" href="/corp"></a>
+		<a class="page" href="/shop"></a>
 
 <script type="text/javascript">
 
