--- a/www/pages/visit.html
+++ b/www/pages/visit.html
@@ -1,1 +1,5 @@
-visit
+<p>Это недорогой, и быстро реализуемый сайт. Он отлично подойдет для представления себя публике, рассказе о своей компании, поможет клиентам связаться с вами и ознакомиться с вашими услугами. Сайт состоит из одной страницы, но формат позволяет вам уместить сколько угодно информации на ней. Время создания такого сайта не больше 3 дней. Это хороший выбор если вы ищете простой и быстрый способ связи между вашей компанией и людьми в интернете.</p>
+
+<svg id="svgfre" width="8%" height="8%" viewBox="0 0 100 100">
+					<use xlink:href="/img/pageUnlim.svg#windowInfinit" ></use>
+					</svg>
