--- a/www/pages/shop.html
+++ b/www/pages/shop.html
@@ -1,1 +1,82 @@
-shop
+<h2 class="headline">Интернет магазин</h2>
+<ul class="shop-ul">
+<h2 class="headline">Преимущества интернет магазина</h2>
+	<li>
+		<div class="descriptor-img"></div>
+		<div class="spoiler-link">
+			<h2>Полное управление интернет магазином</h2>
+			<div class="spoiler-body">
+				<p>Несмотря на то, что магазин идеально подходит новичкам, функционал магазина от этого никак не пострадал, и его с легкостью могут использовать профессионалы. Для создания своего магазина с нуля вам не нужны знания языков программирования и настройки серверов: все действия происходят через браузер в интуитивно-понятном интерфейсе. Даже если у вас возникнут вопросы, вы всегда сможете получить помощь.</p>
+			</div>
+		</div>
+	</li>
+	<li>
+		<div class="descriptor-img"></div>
+		<div class="spoiler-link">
+			<h2>Управление и настройка, через удобную Админ-панель.</h2>
+			<div class="spoiler-body">
+				<p>
+Основное управление и настройка магазина происходит через Админ-панель. Здесь вы можете добавлять товары, загружать прайс-листы, управлять заказами, настраивать способы доставки товаров, создавать подробные отчеты, настраивать матрицы скидок/наценок на товары и многое другое.</p>
+			</div>
+		</div>
+	</li>
+	<li>
+		<div class="descriptor-img"></div>
+		<div class="spoiler-link">
+			<h2>Персонализация</h2>
+			<div class="spoiler-body">
+				<p>
+Не беспокойтесь о том, что ваш магазин будет выглядеть как и все другие. Вы можете полностью преобразить дизайн магазина: с помощью встроенного html-редактора, или выбрав один из множества уже готовых шаблонов.</p>
+			</div>
+		</div>
+	</li>
+	<li>
+		<div class="descriptor-img"></div>
+		<div class="spoiler-link">
+			<h2>Управление товарами</h2>
+			<div class="spoiler-body">
+				<p>
+Неважно, большой или маленький магазин вы хотите создать. В нашем интернет-магазине вы можете продавать материальные и электронные товары, электронные коды или услуги. Функционал управления товарами покажется вам простым и понятным.</p>
+			</div>
+		</div>
+	</li>
+	<li>
+		<div class="descriptor-img"></div>
+		<div class="spoiler-link">
+			<h2>Доставка товаров</h2>
+			<div class="spoiler-body">
+				<p>
+Ваши покупатели смогут получить свой заказ удобным для них способом. Для этого вам нужно всего лишь настроить способы доставки: самовывоз, Почта России (наложенный платеж, EMS, отправление 1 класса) и др.</p>
+			</div>
+		</div>
+	</li>
+	<li>
+		<div class="descriptor-img"></div>
+		<div class="spoiler-link">
+			<h2>Оплата заказов</h2>
+			<div class="spoiler-body">
+				<p>
+Оплатить заказ ваши покупатели смогут как при получении товара наличными, так и заранее с помощью встроенной системы автоматического приема оплаты: Банковские карты (Visa/Mastercard), Электронные деньги (WebMoney, Яндекс.Деньги), Мобильные платежи.</p>
+			</div>
+		</div>
+	</li>
+	<li>
+		<div class="descriptor-img"></div>
+		<div class="spoiler-link">
+			<h2>Интеграция с сайтом</h2>
+			<div class="spoiler-body">
+				<p>
+Интернет-магазин может быть лишь частью вашего сайта. К примеру, пользователь может почитать интересные статьи о вас и характеристике ваших товаров, после чего перейти в интернет-магазин и что-то купить.</p>
+			</div>
+		</div>
+	</li>
+</ul>
+<div class="shop-prev"><h2 class="headline">Примеры магазинов</h2>
+<div></div>
+</div>
+
+<script>
+$('.spoiler-link').click(function(){
+$(this).children('.spoiler-body').toggle(300);
+});
+</script>
