--- a/www/pages/shop.html
+++ b/www/pages/shop.html
@@ -77,6 +77,7 @@
 
 <script>
 $('.spoiler-link').click(function(){
+$(this).children("h2").css('color','#888');
 $(this).children('.spoiler-body').toggle(300);
 });
 </script>
