--- a/www/pages/shop.html
+++ b/www/pages/shop.html
@@ -76,14 +76,13 @@
 </div>
 
 <script>
-
 $( ".spoiler-link" ).click(function() {
 if($('.spoiler-body:visible', this).length){
 	$('.spoiler-body', this).stop().slideToggle(300);
 	$(this).children("h2").css('color','');		
 } else {
 	$('.spoiler-body', this).stop().slideToggle(300);
-	$(this).children("h2").css('color','#d7844d');
+	$('h2', this).css('color','#d7844d');
 }
 });
 </script>
