--- a/www/pages/shop.html
+++ b/www/pages/shop.html
@@ -78,11 +78,10 @@
 <script>
 $( ".spoiler-link" ).click(function() {
 if($('.spoiler-body:visible', this).length){
-	$('.spoiler-body', this).stop().slideToggle(300);
-	$(this).children("h2").css('color','');		
+	$('h2', this).css('color','');		
 } else {
-	$('.spoiler-body', this).stop().slideToggle(300);
 	$('h2', this).css('color','#d7844d');
 }
+$('.spoiler-body', this).stop().slideToggle(300);
 });
 </script>
