--- a/www/pages/shop.html
+++ b/www/pages/shop.html
@@ -65,8 +65,7 @@
 		<div class="spoiler-link">
 			<h2>Интеграция с сайтом</h2>
 			<div class="spoiler-body">
-				<p>
-Интернет-магазин может быть лишь частью вашего сайта. К примеру, пользователь может почитать интересные статьи о вас и характеристике ваших товаров, после чего перейти в интернет-магазин и что-то купить.</p>
+				<p> Интернет-магазин может быть лишь частью вашего сайта. К примеру, пользователь может почитать интересные статьи о вас и характеристике ваших товаров, после чего перейти в интернет-магазин и что-то купить.</p>
 			</div>
 		</div>
 	</li>
