--- a/www/pages/corp.html
+++ b/www/pages/corp.html
@@ -1,1 +1,55 @@
-corp
+<h2 class="headline">Корпоративный сайт</h2>
+<ul class="shop-ul">
+<h2 class="headline">Преимущества интернет магазина</h2>
+
+	<li>
+		<div class="descriptor-img"></div>
+		<div class="spoiler-link">
+			<h2>Удобная система добавления контента</h2>
+			<div class="spoiler-body">
+				<p>Вы сможете добавлять любую текстовую и графическую информация на ваш сайт, без ограничения по количеству страниц. С помощью визуальной системы управления контентом вы можете добавлять или обновлять информацию, не обладая специальными техническими знаниями.</p>
+			</div>
+		</div>
+	</li>
+	<li>
+		<div class="descriptor-img"></div>
+		<div class="spoiler-link">
+			<h2>Персонализация</h2>
+			<div class="spoiler-body">
+				<p>Не беспокойтесь о том, что ваш сайт будет выглядеть как и все другие, мы разработаем индивидуальный дизайн с удобным интуитивно-понятным интерфейсом, исходя из ваших требований. Адаптирован и одинаково удобным, как на компьютере, так и на смартфонох и планшетах.</p>
+			</div>
+		</div>
+	</li>
+	<li>
+		<div class="descriptor-img"></div>
+		<div class="spoiler-link">
+			<h2>Новости</h2>
+			<div class="spoiler-body">
+				<p>Держите ваших клиентов в курсе последний событий происходящий с вашей компанией, уведомляйте об обновление продуктов, акциях и вакансиях.</p>
+			</div>
+		</div>
+	</li>
+	<li>
+		<div class="descriptor-img"></div>
+		<div class="spoiler-link">
+			<h2>Корпоративная почта</h2>
+			<div class="spoiler-body">
+				<p>Вы получите уникальный корпоративный email адрес с названием вашей фирмы, вида service@site-core.ru Можно организовать большую корпаративную сеть и подключить к ней всех ваших сотрудников, управлять доступом к различным перепискам, создавать email конференции для совместного решения различных вопросов.</p>
+			</div>
+		</div>
+	</li>
+</ul>
+<div class="shop-prev"><h2 class="headline">Примеры магазинов</h2>
+<div></div>
+</div>
+
+<script>
+$( ".spoiler-link" ).click(function() {
+if($('.spoiler-body', this).is(":visible")){
+	$('h2', this).css('color','');		
+} else {
+	$('h2', this).css('color','#d7844d');
+}
+$('.spoiler-body', this).stop().slideToggle(300);
+});
+</script>
