--- a/www/pages/corp.html
+++ b/www/pages/corp.html
@@ -1,13 +1,12 @@
 <h2 class="headline">Корпоративный сайт</h2>
 <ul class="shop-ul">
-<h2 class="headline">Преимущества интернет магазина</h2>
-
+	<h2 class="headline">Что вы получите:</h2>
 	<li>
 		<div class="descriptor-img"></div>
 		<div class="spoiler-link">
 			<h2>Удобная система добавления контента</h2>
 			<div class="spoiler-body">
-				<p>Вы сможете добавлять любую текстовую и графическую информация на ваш сайт, без ограничения по количеству страниц. С помощью визуальной системы управления контентом вы можете добавлять или обновлять информацию, не обладая специальными техническими знаниями.</p>
+				<p>Вы сможете добавлять любую текстовую или графическую информация на ваш сайт, без ограничения по количеству страниц. Благодаря визуальной, интуитивной системе управления контентом, Вам не потребуется никакие технические знаний для обновления, добавления и редактирования информации.</p>
 			</div>
 		</div>
 	</li>
@@ -16,7 +15,7 @@
 		<div class="spoiler-link">
 			<h2>Персонализация</h2>
 			<div class="spoiler-body">
-				<p>Не беспокойтесь о том, что ваш сайт будет выглядеть как и все другие, мы разработаем индивидуальный дизайн с удобным интуитивно-понятным интерфейсом, исходя из ваших требований. Адаптирован и одинаково удобным, как на компьютере, так и на смартфонох и планшетах.</p>
+				<p>Не беспокойтесь о том, что ваш сайт будет выглядеть как и все другие, мы разработаем индивидуальный дизайн с удобным интуитивно-понятным интерфейсом, исходя из ваших требований. Сайт будет адаптирован и одинаково удобным, как на компьютере, так и на смартфоне или планшете.</p>
 			</div>
 		</div>
 	</li>
@@ -39,7 +38,7 @@
 		</div>
 	</li>
 </ul>
-<div class="shop-prev"><h2 class="headline">Примеры магазинов</h2>
+<div class="shop-prev"><h2 class="headline">Примеры корпоративных сайтов</h2>
 <div></div>
 </div>
 
