--- a/www/pages/services.html
+++ b/www/pages/services.html
@@ -1,18 +1,22 @@
 <div class="slider">
-<a class="more_button" href="#">Подробнее</a>
 	<ul class="slider_window">
-	  <li class="slide"><div class="middler">
-	  <h3>Сайт-визитка </h3>
-		<p>Представляет посетителям информацию о вашей компании. Этот небольшой сайт, состоящий из 1 - 3 страниц, может познакомить клиента с вашими услугами, расценками и передать контактные данные. </p></div></li>
+	  <li class="slide">
+	   <div class="middler">
+	     <h3>Сайт-визитка </h3>
+		 <p>Представляет посетителям информацию о вашей компании. Этот небольшой сайт, состоящий из 1 - 3 страниц, может познакомить клиента с вашими услугами, расценками и передать контактные данные.</p>
+		</div>
+		<a class="more_button" href="/visit">Подробнее</a>
+	  </li>
 	  <li class="slide"><div class="middler"><h3>Корпоративный сайт </h3>
 	  <p>Позволит вашей компании прочно укрепится в интернете и привлечь много новых клиентов. Постоянно поддерживать с ними связь, а так же, организовывать работу сотрудников через корпоративные сервисы, такие как: корпоративная почта, бухгалтерия, базы данных клиентов, агентская программа</p></div>
+	  <a class="more_button" href="/corp">Подробнее</a>
 		</li>
 	  <li class="slide">
 	  <div class="middler">
 	  <h3>Интернет-магазин</h3>
 	  <p>Обеспечит Вас всем необходимым для успешной торговли в мировой паутине. Расширьте ваш бизнес за пределы города - на весь регион? всю страну? или даже весь мир?! Решать только вам.</p>
 	  </div>
-	  
+	  <a class="more_button" href="/shop">Подробнее</a>
 	  </li>
 	</ul>
 
@@ -94,20 +98,20 @@
 	</div>
 </form>
 
-		<a class="page" href="/visit"></a>
-		<a class="page" href="/corp"></a>
-		<a class="page" href="/shop"></a>
-
 <script type="text/javascript">
-
 	$(document).ready(function(){
 		slider = $('.slider_window').bxSlider({
-			mode:'fade',
+			mode:'horizontal',
+			easing:'ease-in-out',
 			pagerCustom: '.slider_control',
 			//slideWidth: 600,
 			infiniteLoop:false,
-			controls: false
+			controls: false,
+		//	onSlideAfter: function(){
+		//		console.log(slider.getCurrentSlide());
+		//	}
 		});
+		
 		switch(window.location.hash){
 			case '#visit':
 				slider.goToSlide(0);
