--- a/www/pages/shop.html
+++ b/www/pages/shop.html
@@ -13,7 +13,7 @@
 	<li>
 		<div class="descriptor-img"></div>
 		<div class="spoiler-link">
-			<h2>Управление и настройка, через удобную Админ-панель.</h2>
+			<h2 class="admin-control">Управление и настройка, через удобную Админ-панель.</h2>
 			<div class="spoiler-body">
 				<p>
 Основное управление и настройка магазина происходит через Админ-панель. Здесь вы можете добавлять товары, загружать прайс-листы, управлять заказами, настраивать способы доставки товаров, создавать подробные отчеты, настраивать матрицы скидок/наценок на товары и многое другое.</p>
@@ -23,7 +23,7 @@
 	<li>
 		<div class="descriptor-img"></div>
 		<div class="spoiler-link">
-			<h2>Персонализация</h2>
+			<h2 class="personal">Персонализация</h2>
 			<div class="spoiler-body">
 				<p>
 Не беспокойтесь о том, что ваш магазин будет выглядеть как и все другие. Вы можете полностью преобразить дизайн магазина: с помощью встроенного html-редактора, или выбрав один из множества уже готовых шаблонов.</p>
@@ -33,7 +33,7 @@
 	<li>
 		<div class="descriptor-img"></div>
 		<div class="spoiler-link">
-			<h2>Управление товарами</h2>
+			<h2 class="ittem-control">Управление товарами</h2>
 			<div class="spoiler-body">
 				<p>
 Неважно, большой или маленький магазин вы хотите создать. В нашем интернет-магазине вы можете продавать материальные и электронные товары, электронные коды или услуги. Функционал управления товарами покажется вам простым и понятным.</p>
@@ -63,7 +63,7 @@
 	<li>
 		<div class="descriptor-img"></div>
 		<div class="spoiler-link">
-			<h2>Интеграция с сайтом</h2>
+			<h2 class="soc-control">Интеграция с сайтом</h2>
 			<div class="spoiler-body">
 				<p> Интернет-магазин может быть лишь частью вашего сайта. К примеру, пользователь может почитать интересные статьи о вас и характеристике ваших товаров, после чего перейти в интернет-магазин и что-то купить.</p>
 			</div>
