иконги, энд вер

--- a/www/pages/corp.html
+++ b/www/pages/corp.html
@@ -4,7 +4,7 @@
 	<li>
 		<div class="descriptor-img"></div>
 		<div class="spoiler-link">
-			<h2>Удобная система добавления контента</h2>
+			<h2 class="cms-icon">Удобная система добавления контента</h2>
 			<div class="spoiler-body">
 				<p>Вы сможете добавлять любую текстовую или графическую информация на ваш сайт, без ограничения по количеству страниц. Благодаря визуальной, интуитивной системе управления контентом, Вам не потребуется никакие технические знаний для обновления, добавления и редактирования информации.</p>
 			</div>
@@ -13,7 +13,7 @@
 	<li>
 		<div class="descriptor-img"></div>
 		<div class="spoiler-link">
-			<h2>Персонализация</h2>
+			<h2 class="personal-settings-icon">Персонализация</h2>
 			<div class="spoiler-body">
 				<p>Не беспокойтесь о том, что ваш сайт будет выглядеть как и все другие, мы разработаем индивидуальный дизайн с удобным интуитивно-понятным интерфейсом, исходя из ваших требований. Сайт будет адаптирован и одинаково удобным, как на компьютере, так и на смартфоне или планшете.</p>
 			</div>
@@ -22,7 +22,7 @@
 	<li>
 		<div class="descriptor-img"></div>
 		<div class="spoiler-link">
-			<h2>Новости</h2>
+			<h2 class="news-icon">Новости</h2>
 			<div class="spoiler-body">
 				<p>Держите ваших клиентов в курсе последний событий происходящий с вашей компанией, уведомляйте об обновление продуктов, акциях и вакансиях.</p>
 			</div>
@@ -31,7 +31,7 @@
 	<li>
 		<div class="descriptor-img"></div>
 		<div class="spoiler-link">
-			<h2>Корпоративная почта</h2>
+			<h2 class="mail-icon">Корпоративная почта</h2>
 			<div class="spoiler-body">
 				<p>Вы получите уникальный корпоративный email адрес с названием вашей фирмы, вида service@site-core.ru Можно организовать большую корпаративную сеть и подключить к ней всех ваших сотрудников, управлять доступом к различным перепискам, создавать email конференции для совместного решения различных вопросов.</p>
 			</div>
