--- a/www/pages/shop.html
+++ b/www/pages/shop.html
@@ -4,7 +4,7 @@
 	<li>
 		<div class="descriptor-img"></div>
 		<div class="spoiler-link">
-			<h2>Полное управление интернет магазином</h2>
+			<h2 class="easy-icon">Легкое управление интернет магазином</h2>
 			<div class="spoiler-body">
 				<p>Несмотря на то, что магазин идеально подходит новичкам, функционал магазина от этого никак не пострадал, и его с легкостью могут использовать профессионалы. Для создания своего магазина с нуля вам не нужны знания языков программирования и настройки серверов: все действия происходят через браузер в интуитивно-понятном интерфейсе. Даже если у вас возникнут вопросы, вы всегда сможете получить помощь.</p>
 			</div>
@@ -13,7 +13,7 @@
 	<li>
 		<div class="descriptor-img"></div>
 		<div class="spoiler-link">
-			<h2 class="admin-control">Управление и настройка, через удобную Админ-панель.</h2>
+			<h2 class="admin-icon">Управление и настройка, через удобную Админ-панель.</h2>
 			<div class="spoiler-body">
 				<p>
 Основное управление и настройка магазина происходит через Админ-панель. Здесь вы можете добавлять товары, загружать прайс-листы, управлять заказами, настраивать способы доставки товаров, создавать подробные отчеты, настраивать матрицы скидок/наценок на товары и многое другое.</p>
@@ -23,7 +23,7 @@
 	<li>
 		<div class="descriptor-img"></div>
 		<div class="spoiler-link">
-			<h2 class="personal">Персонализация</h2>
+			<h2 class="personal-icon">Персонализация</h2>
 			<div class="spoiler-body">
 				<p>
 Не беспокойтесь о том, что ваш магазин будет выглядеть как и все другие. Вы можете полностью преобразить дизайн магазина: с помощью встроенного html-редактора, или выбрав один из множества уже готовых шаблонов.</p>
@@ -33,7 +33,7 @@
 	<li>
 		<div class="descriptor-img"></div>
 		<div class="spoiler-link">
-			<h2 class="ittem-control">Управление товарами</h2>
+			<h2 class="ittem-icon">Управление товарами</h2>
 			<div class="spoiler-body">
 				<p>
 Неважно, большой или маленький магазин вы хотите создать. В нашем интернет-магазине вы можете продавать материальные и электронные товары, электронные коды или услуги. Функционал управления товарами покажется вам простым и понятным.</p>
@@ -43,7 +43,7 @@
 	<li>
 		<div class="descriptor-img"></div>
 		<div class="spoiler-link">
-			<h2>Доставка товаров</h2>
+			<h2 class="delivery-icon">Доставка товаров</h2>
 			<div class="spoiler-body">
 				<p>
 Ваши покупатели смогут получить свой заказ удобным для них способом. Для этого вам нужно всего лишь настроить способы доставки: самовывоз, Почта России (наложенный платеж, EMS, отправление 1 класса) и др.</p>
@@ -53,7 +53,7 @@
 	<li>
 		<div class="descriptor-img"></div>
 		<div class="spoiler-link">
-			<h2>Оплата заказов</h2>
+			<h2 class="payment-icon" >Оплата заказов</h2>
 			<div class="spoiler-body">
 				<p>
 Оплатить заказ ваши покупатели смогут как при получении товара наличными, так и заранее с помощью встроенной системы автоматического приема оплаты: Банковские карты (Visa/Mastercard), Электронные деньги (WebMoney, Яндекс.Деньги), Мобильные платежи.</p>
@@ -63,7 +63,7 @@
 	<li>
 		<div class="descriptor-img"></div>
 		<div class="spoiler-link">
-			<h2 class="soc-control">Интеграция с сайтом</h2>
+			<h2 class="soc-icon">Интеграция с сайтом</h2>
 			<div class="spoiler-body">
 				<p> Интернет-магазин может быть лишь частью вашего сайта. К примеру, пользователь может почитать интересные статьи о вас и характеристике ваших товаров, после чего перейти в интернет-магазин и что-то купить.</p>
 			</div>
