--- a/www/pages/portfolio.html
+++ b/www/pages/portfolio.html
@@ -9,7 +9,7 @@
 </script>
 <div class="container clear-fix">
 		<div class="thumbnail">
-		<div class="img_wrapper img3"></div>
+		<div class="img_wrapper portfolio_bg_1"></div>
 <div class="description">
 	<div>
 		<div class="top_left_bort"></div>
@@ -21,24 +21,24 @@
 </div>
 </div><!--
 		--><div class="thumbnail">
-		<div class="img_wrapper img3"></div>
+		<div class="img_wrapper portfolio_bg_2"></div>
 <div class="description">
 	<div>
 		<div class="top_left_bort"></div>
-		<h2>Cam-Net</h2>
-		<p>Сайт систем видео наблюдения.</p>
+		<h2>Xbox-world</h2>
+		<p>Интернет магазин, игровой техники.</p>
 		<div class="clear-fix"><a class="link" href=""></a><a class="look" href=""></a></div>
 		<div class="bottom_right_bort"></div>
 	</div>
 </div>
 </div><!--
 		--><div class="thumbnail">
-		<div class="img_wrapper img3"></div>
+		<div class="img_wrapper portfolio_bg_3"></div>
 <div class="description">
 	<div>
 		<div class="top_left_bort"></div>
-		<h2>Cam-Net</h2>
-		<p>Сайт систем видео наблюдения.</p>
+		<h2>Xbox-world social</h2>
+		<p>Сайт сообщества xbox-world.</p>
 		<div class="clear-fix"><a class="link" href=""></a><a class="look" href=""></a></div>
 		<div class="bottom_right_bort"></div>
 	</div>
