--- a/www/pages/shop.html
+++ b/www/pages/shop.html
@@ -75,7 +75,7 @@
 <div class="shop-prev"><h2 class="headline">Примеры магазинов</h2>
 <div></div>
 </div>
-
+<embed id="svg" type="image/svg+xml" src="/img/arrow_right.svg" height="200" width="200">
 <script>
 $( ".spoiler-link" ).click(function() {
 if($('.spoiler-body', this).is(":visible")){
@@ -85,9 +85,16 @@ if($('.spoiler-body', this).is(":visible")){
 }
 $('.spoiler-body', this).stop().slideToggle(300);
 });
-
-$('.side_arrow').hover(function(){
-	$('#shadow').css("opacity","0.2"),
-	$('#shadow').css("opacity","0");
+$(document).ready(function(){
+var SVG = document.getElementById("svg");	
+//var SVG = document.getElementById("svg").getSVGDocument();
+//var svgEl = SVG.getElementById('#shadow');
+	$( ".side_arrow" ).hover(
+  function() {
+    $(SVG).css("opacity","0.2");
+  }, function() {
+    $(SVG).css("opacity","1");
+  }
+);
 });
 </script>
