--- a/www/pages/shop.html
+++ b/www/pages/shop.html
@@ -88,7 +88,7 @@ $('.spoiler-body', this).stop().slideToggle(300);
 $(document).ready(function(){
 var SVG = document.getElementById("svg");	
 //var SVG = document.getElementById("svg").getSVGDocument();
-//var svgEl = SVG.getElementById('#shadow');
+//var svgEl = SVG.getElementById('shadow');
 	$( ".side_arrow" ).hover(
   function() {
     $(SVG).css("opacity","0.2");
