--- a/www/pages/shop.html
+++ b/www/pages/shop.html
@@ -1,4 +1,11 @@
-<a href="#" class="side_arrow side_arrow_left">Сайт-визитка</a>
+
+<a href="#" class="side_arrow side_arrow_left">
+
+<svg class="arrow_left_icon icon" viewBox="0 0 150 50">
+      <rect width="150" height="50" />
+ </svg>
+
+</a>
 <a href="#" class="side_arrow side_arrow_right">Сайт-визитка</a>
 <h2 class="headline">Интернет магазин</h2>
 <ul class="shop-ul">
@@ -98,3 +105,6 @@ var SVG = document.getElementById("svg");
 );
 });
 </script>
+
+
+
