оптимизация изображений, перевод в динамический тип

--- a/www/pages/portfolio.html
+++ b/www/pages/portfolio.html
@@ -9,19 +9,11 @@
 </script>
 <div class="container clear-fix">
 		<div class="thumbnail">
-		<div class="img_wrapper portfolio_bg_1"></div>
-<div class="description">
-	<div>
-		<div class="top_left_bort"></div>
-		<h2>Cam-Net</h2>
-		<p>Сайт систем видео наблюдения.</p>
-		<div class="clear-fix"><a class="link" href=""></a><a class="look" href=""></a></div>
-		<div class="bottom_right_bort"></div>
-	</div>
-</div>
-</div><!--
-		--><div class="thumbnail">
-		<div class="img_wrapper portfolio_bg_2"></div>
+		<div class="img_wrapper">
+		<svg viewBox="0 0 100 56.2">
+		<use id="svg_arrow" xlink:href="/img/Portfolio_icon.svg#Xbox-world" ></use>
+		</svg>
+		</div>
 <div class="description">
 	<div>
 		<div class="top_left_bort"></div>
@@ -33,7 +25,27 @@
 </div>
 </div><!--
 		--><div class="thumbnail">
-		<div class="img_wrapper portfolio_bg_3"></div>
+		<div class="img_wrapper">
+		<svg viewBox="0 0 100 56.2">
+		<use id="svg_arrow" xlink:href="/img/Portfolio_icon.svg#Cam-Net" ></use>
+		</svg>
+		</div>
+<div class="description">
+	<div>
+		<div class="top_left_bort"></div>
+		<h2>Cam-Net</h2>
+		<p>Сайт систем видео наблюдения.</p>
+		<div class="clear-fix"><a class="link" href=""></a><a class="look" href=""></a></div>
+		<div class="bottom_right_bort"></div>
+	</div>
+</div>
+</div><!--
+		--><div class="thumbnail">
+		<div class="img_wrapper">
+		<svg viewBox="0 0 100 56.2">
+		<use id="svg_arrow" xlink:href="/img/Portfolio_icon.svg#Xbox-world-social" ></use>
+		</svg>
+		</div>
 <div class="description">
 	<div>
 		<div class="top_left_bort"></div>
