--- a/www/pages/services.html
+++ b/www/pages/services.html
@@ -23,9 +23,9 @@
 	<div class="slider_control clear-fix">
 	  <a data-slide-index="0" onclick="window.location.hash='visit';" href="">
 		<div class="slider_visit"><h2>Сайт-визитка</h2><p>Отлично подойдет для представления вас, или вашего товара, широкой публике</p>
-		<div class="cirkle lower">
-			<svg viewBox="0 0 100 50">
-					<use xlink:href="/img/Visited-Site.svg#Visit_site" ></use>
+		<div class="cirkle">
+			<svg viewBox="0 0 100 52">
+					<use xlink:href="/img/Services_icons.svg#Visit-site" ></use>
 					</svg>
 			</div>
 			</div>
@@ -36,9 +36,9 @@
 			<h2>Корпоративный сайт</h2>
 			<p>Наиболее эффективное решение для продвижения вашей компании в интернете!</p>
 			<div class="cirkle">
-				<svg viewBox="0 0 100 50">
-					<use xlink:href="/img/corp_site2.svg#Corp_site" ></use>
-					</svg>
+				<svg viewBox="0 0 100 52">
+					<use xlink:href="/img/Services_icons.svg#Corp-site" ></use>
+				</svg>
 			</div>
 		</div>
 	  </a>
@@ -46,9 +46,9 @@
 		<h2>Интернет-магазин</h2>
 		<p>Безграничные возможности для организации торговли в интернете.</p>
 		<div class="cirkle">
-			<svg viewBox="0 0 100 50">
-					<use xlink:href="/img/Market.svg#Market_site" ></use>
-					</svg>
+			<svg viewBox="0 0 100 52">
+				<use xlink:href="/img/Services_icons.svg#Market-site" ></use>
+			</svg>
 		</div>
 
 		</div>
