--- a/www/pages/corp.html
+++ b/www/pages/corp.html
@@ -2,36 +2,54 @@
 <ul class="shop-ul">
 	<h2 class="headline">Что вы получите:</h2>
 	<li>
-		<div class="descriptor-img"></div>
 		<div class="spoiler-link">
-			<h2 class="cms-icon">Удобная система добавления контента</h2>
+		<div class="description_icons">
+			<svg viewBox="0 0 100 100">
+				<use xlink:href="/img/Description_icons.svg#Cms_icon" ></use>
+			</svg>
+			</div>
+			<h2>Удобная система добавления контента</h2>
 			<div class="spoiler-body">
 				<p>Вы сможете добавлять любую текстовую или графическую информация на ваш сайт, без ограничения по количеству страниц. Благодаря визуальной, интуитивной системе управления контентом, Вам не потребуется никакие технические знаний для обновления, добавления и редактирования информации.</p>
 			</div>
 		</div>
 	</li>
 	<li>
-		<div class="descriptor-img"></div>
+		
 		<div class="spoiler-link">
-			<h2 class="personal-settings-icon">Персонализация</h2>
+		<div class="description_icons">
+			<svg viewBox="0 0 100 100">
+				<use xlink:href="/img/Description_icons.svg#Personal_icon" ></use>
+			</svg>
+			</div>
+			<h2>Персонализация</h2>
 			<div class="spoiler-body">
 				<p>Не беспокойтесь о том, что ваш сайт будет выглядеть как и все другие, мы разработаем индивидуальный дизайн с удобным интуитивно-понятным интерфейсом, исходя из ваших требований. Сайт будет адаптирован и одинаково удобным, как на компьютере, так и на смартфоне или планшете.</p>
 			</div>
 		</div>
 	</li>
 	<li>
-		<div class="descriptor-img"></div>
+	
 		<div class="spoiler-link">
-			<h2 class="news-icon">Новости</h2>
+		<div class="description_icons">
+			<svg viewBox="0 0 100 100">
+				<use xlink:href="/img/Description_icons.svg#News_icon" ></use>
+			</svg>
+			</div>
+			<h2>Новости</h2>
 			<div class="spoiler-body">
 				<p>Держите ваших клиентов в курсе последний событий происходящий с вашей компанией, уведомляйте об обновление продуктов, акциях и вакансиях.</p>
 			</div>
 		</div>
 	</li>
 	<li>
-		<div class="descriptor-img"></div>
 		<div class="spoiler-link">
-			<h2 class="mail-icon">Корпоративная почта</h2>
+		<div class="description_icons">
+			<svg viewBox="0 0 100 100">
+				<use xlink:href="/img/Description_icons.svg#Mail_icon" ></use>
+			</svg>
+			</div>
+			<h2>Корпоративная почта</h2>
 			<div class="spoiler-body">
 				<p>Вы получите уникальный корпоративный email адрес с названием вашей фирмы, вида service@site-core.ru Можно организовать большую корпаративную сеть и подключить к ней всех ваших сотрудников, управлять доступом к различным перепискам, создавать email конференции для совместного решения различных вопросов.</p>
 			</div>
