--- a/www/pages/shop.html
+++ b/www/pages/shop.html
@@ -13,18 +13,28 @@
 <ul class="shop-ul">
 <h2 class="headline">Преимущества интернет магазина</h2>
 	<li>
-		<div class="descriptor-img"></div>
+		
 		<div class="spoiler-link">
-			<h2 class="easy-icon">Легкое управление интернет магазином</h2>
+		<div class="description_icons">
+			<svg viewBox="0 0 100 100">
+				<use xlink:href="/img/Description_icons.svg#Pad_icon" ></use>
+			</svg>
+			</div>
+			<h2>Легкое управление интернет магазином</h2>
 			<div class="spoiler-body">
 				<p>Несмотря на то, что магазин идеально подходит новичкам, функционал магазина от этого никак не пострадал, и его с легкостью могут использовать профессионалы. Для создания своего магазина с нуля вам не нужны знания языков программирования и настройки серверов: все действия происходят через браузер в интуитивно-понятном интерфейсе. Даже если у вас возникнут вопросы, вы всегда сможете получить помощь.</p>
 			</div>
 		</div>
 	</li>
 	<li>
-		<div class="descriptor-img"></div>
+		
 		<div class="spoiler-link">
-			<h2 class="admin-icon">Управление и настройка, через удобную Админ-панель.</h2>
+		<div class="description_icons">
+			<svg viewBox="0 0 100 100">
+				<use xlink:href="/img/Description_icons.svg#Settings_icon" ></use>
+			</svg>
+			</div>
+			<h2>Управление и настройка, через удобную Админ-панель.</h2>
 			<div class="spoiler-body">
 				<p>
 Основное управление и настройка магазина происходит через Админ-панель. Здесь вы можете добавлять товары, загружать прайс-листы, управлять заказами, настраивать способы доставки товаров, создавать подробные отчеты, настраивать матрицы скидок/наценок на товары и многое другое.</p>
@@ -32,9 +42,13 @@
 		</div>
 	</li>
 	<li>
-		<div class="descriptor-img"></div>
 		<div class="spoiler-link">
-			<h2 class="personal-icon">Персонализация</h2>
+			<div class="description_icons">
+			<svg viewBox="0 0 100 100">
+				<use xlink:href="/img/Description_icons.svg#List_icon" ></use>
+			</svg>
+			</div>
+			<h2>Персонализация</h2>
 			<div class="spoiler-body">
 				<p>
 Не беспокойтесь о том, что ваш магазин будет выглядеть как и все другие. Вы можете полностью преобразить дизайн магазина: с помощью встроенного html-редактора, или выбрав один из множества уже готовых шаблонов.</p>
@@ -42,9 +56,14 @@
 		</div>
 	</li>
 	<li>
-		<div class="descriptor-img"></div>
+		
 		<div class="spoiler-link">
-			<h2 class="ittem-icon">Управление товарами</h2>
+		<div class="description_icons">
+			<svg viewBox="0 0 100 100">
+				<use xlink:href="/img/Description_icons.svg#Market_icon" ></use>
+			</svg>
+			</div>
+			<h2>Управление товарами</h2>
 			<div class="spoiler-body">
 				<p>
 Неважно, большой или маленький магазин вы хотите создать. В нашем интернет-магазине вы можете продавать материальные и электронные товары, электронные коды или услуги. Функционал управления товарами покажется вам простым и понятным.</p>
@@ -52,9 +71,14 @@
 		</div>
 	</li>
 	<li>
-		<div class="descriptor-img"></div>
+		
 		<div class="spoiler-link">
-			<h2 class="delivery-icon">Доставка товаров</h2>
+		<div class="description_icons">
+			<svg viewBox="0 0 100 100">
+				<use xlink:href="/img/Description_icons.svg#Delivery_icon" ></use>
+			</svg>
+			</div>
+			<h2>Доставка товаров</h2>
 			<div class="spoiler-body">
 				<p>
 Ваши покупатели смогут получить свой заказ удобным для них способом. Для этого вам нужно всего лишь настроить способы доставки: самовывоз, Почта России (наложенный платеж, EMS, отправление 1 класса) и др.</p>
@@ -62,9 +86,14 @@
 		</div>
 	</li>
 	<li>
-		<div class="descriptor-img"></div>
+		
 		<div class="spoiler-link">
-			<h2 class="payment-icon" >Оплата заказов</h2>
+		<div class="description_icons">
+			<svg viewBox="0 0 100 100">
+				<use xlink:href="/img/Description_icons.svg#Paid_icon" ></use>
+			</svg>
+			</div>
+			<h2>Оплата заказов</h2>
 			<div class="spoiler-body">
 				<p>
 Оплатить заказ ваши покупатели смогут как при получении товара наличными, так и заранее с помощью встроенной системы автоматического приема оплаты: Банковские карты (Visa/Mastercard), Электронные деньги (WebMoney, Яндекс.Деньги), Мобильные платежи.</p>
@@ -72,9 +101,14 @@
 		</div>
 	</li>
 	<li>
-		<div class="descriptor-img"></div>
+		
 		<div class="spoiler-link">
-			<h2 class="soc-icon">Интеграция с сайтом</h2>
+		<div class="description_icons">
+			<svg viewBox="0 0 100 100">
+				<use xlink:href="/img/Description_icons.svg#Soc_icon" ></use>
+			</svg>
+			</div>
+			<h2>Интеграция с сайтом</h2>
 			<div class="spoiler-body">
 				<p> Интернет-магазин может быть лишь частью вашего сайта. К примеру, пользователь может почитать интересные статьи о вас и характеристике ваших товаров, после чего перейти в интернет-магазин и что-то купить.</p>
 			</div>
