--- a/www/pages/shop.html
+++ b/www/pages/shop.html
@@ -93,7 +93,7 @@
 				<use xlink:href="/img/Description_icons.svg#Paid_icon" ></use>
 			</svg>
 			</div>
-			<h2>Оплата заказов</h2>
+			<h2>Поддержка оплаты заказов, через любые сервисы.</h2>
 			<div class="spoiler-body">
 				<p>
 Оплатить заказ ваши покупатели смогут как при получении товара наличными, так и заранее с помощью встроенной системы автоматического приема оплаты: Банковские карты (Visa/Mastercard), Электронные деньги (WebMoney, Яндекс.Деньги), Мобильные платежи.</p>
