--- a/www/pages/corp.html
+++ b/www/pages/corp.html
@@ -19,7 +19,7 @@
 		<div class="spoiler-link">
 		<div class="description_icons">
 			<svg viewBox="0 0 100 100">
-				<use xlink:href="/img/Description_icons.svg#Personal_icon" ></use>
+				<use xlink:href="/img/Description_icons.svg#Card_icon" ></use>
 			</svg>
 			</div>
 			<h2>Персонализация</h2>
